RESOLVED FIXED200645
Contextual menu Hide and Show Link Previews should not have a symbol
https://bugs.webkit.org/show_bug.cgi?id=200645
Summary Contextual menu Hide and Show Link Previews should not have a symbol
Dean Jackson
Reported 2019-08-12 15:14:50 PDT
Contextual menu Hide and Show Link Previews should not have a symbol
Attachments
Patch (1.47 KB, patch)
2019-08-12 15:17 PDT, Dean Jackson
wenson_hsieh: review+
Dean Jackson
Comment 1 2019-08-12 15:15:22 PDT
Dean Jackson
Comment 2 2019-08-12 15:17:05 PDT
Alex Christensen
Comment 3 2019-08-12 15:22:56 PDT
Can a unit test similar to the one added in r246657 be written for this behavior?
Dean Jackson
Comment 4 2019-08-12 15:23:28 PDT
Note You need to log in before you can comment on or make changes to this bug.