Cherry-pick r248550. rdar://problem/54237677

Contextual menu Hide and Show Link Previews should not have a symbol
    https://bugs.webkit.org/show_bug.cgi?id=200645
    <rdar://problem/54129647>

    Reviewed by Wenson Hsieh.

    Don't use an image on the UIMenuItem.

    * UIProcess/API/Cocoa/_WKElementAction.mm:
    (+[_WKElementAction imageForElementActionType:]): Return nil for Show/Hide Link Previews.

    Canonical link: https://commits.webkit.org/214400@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248550 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/213666.231@safari-608-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-608-branch@248623 268f45cc-cd09-0410-ab3c-d52691b4dbfc